# cyberdeck

./: .gitignore  APPS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE-AUDIT.md  DEMO-AUDIT.md  DEVELOPMENT-PLAN-DL1.md  DEVELOPMENT-PLAN-DL2.md  DEVELOPMENT-PLAN.md  FIXTURE-AUDIT.md  GROUND-STATE.md  LICENSE  OS.md  PLAN-SDK-REFACTOR.md  README.md  REFACTOR.md  REPORTS.md  partitions.csv  sdkconfig  sdkconfig.defaults
apps/: bluesky.deck  demo.deck  files.deck  hello.deck  launcher.deck  ping.deck  settings.deck  taskman.deck
apps/conformance/: app_assets.deck  app_bridge_ui.deck  app_flow.deck  app_machine.deck  app_machine_hooks.deck  app_migrate.deck  edge_comments.deck  edge_deep_let.deck  edge_double_neg.deck  edge_empty_strings.deck  edge_escapes.deck  edge_float_special.deck  edge_int_limits.deck  edge_long_ident.deck  edge_long_string.deck  edge_match_deep.deck  edge_match_when.deck  edge_nested_let.deck  edge_nested_match.deck  edge_string_intern.deck  edge_unicode.deck  err_capability_missing.deck  err_deck_os.deck  err_div_zero_float.deck  err_div_zero_int.deck  err_edition.deck  err_effect_undeclared.deck  err_fn_arity.deck  err_level_high.deck  err_level_unknown.deck  (+52 more)
components/app_framework/: CMakeLists.txt  app_manager.c  app_registry.c  app_state.c  os_app_discover.c  os_manifest.c  os_nav.c  os_script.c
components/app_framework/include/: app_manager.h  app_registry.h  app_state.h  os_app_discover.h  os_manifest.h  os_nav.h  os_script.h
components/apps/settings/: CMakeLists.txt  app_settings.c  settings_about.c  settings_audio.c  settings_bluetooth.c  settings_common.h  settings_display.c  settings_security.c  settings_storage.c  settings_time.c  settings_wifi.c
components/apps/settings/include/: app_settings.h
components/board/: CMakeLists.txt  Kconfig  hal_backlight.c  hal_battery.c  hal_ch422g.c  hal_gesture.c  hal_lcd.c  hal_rtc.c  hal_sdcard.c  idf_component.yml
components/board/include/: hal_backlight.h  hal_battery.h  hal_ch422g.h  hal_gesture.h  hal_lcd.h  hal_pins.h  hal_rtc.h  hal_sdcard.h  hal_touch.h
components/deck_bridge_ui/: CMakeLists.txt  idf_component.yml
components/deck_bridge_ui/include/: deck_bridge_ui.h  deck_bridge_ui_internal.h
components/deck_bridge_ui/src/: deck_bridge_ui.c  deck_bridge_ui_activity.c  deck_bridge_ui_decode.c  deck_bridge_ui_lvgl.c  deck_bridge_ui_navbar.c  deck_bridge_ui_overlays.c  deck_bridge_ui_patch.c  deck_bridge_ui_statusbar.c
components/deck_runtime/: CMakeLists.txt
components/deck_runtime/include/: deck_alloc.h  deck_arena.h  deck_ast.h  deck_dvc.h  deck_error.h  deck_intern.h  deck_interp.h  deck_lexer.h  deck_loader.h  deck_parser.h  deck_runtime.h  deck_types.h
components/deck_runtime/src/: deck_alloc.c  deck_arena.c  deck_ast.c  deck_dvc.c  deck_error.c  deck_intern.c  deck_interp.c  deck_interp_test.c  deck_lexer.c  deck_lexer_test.c  deck_loader.c  deck_loader_test.c  deck_parser.c  deck_parser_test.c  deck_runtime.c  deck_runtime_placeholder.c  deck_types.c
components/deck_sdi/: CMakeLists.txt  Kconfig
components/deck_sdi/include/: deck_sdi.h  deck_sdi_registry.h  deck_sdi_services.h
components/deck_sdi/include/drivers/: deck_sdi_battery.h  deck_sdi_bridge_ui.h  deck_sdi_display.h  deck_sdi_fs.h  deck_sdi_http.h  deck_sdi_info.h  deck_sdi_nvs.h  deck_sdi_security.h  deck_sdi_shell.h  deck_sdi_time.h  deck_sdi_touch.h  deck_sdi_wifi.h
components/deck_sdi/src/: deck_sdi_placeholder.c  deck_sdi_registry.c  deck_sdi_services.c  deck_sdi_strerror.c
components/deck_sdi/src/drivers/: deck_sdi_battery_esp32.c  deck_sdi_bridge_ui_skel.c  deck_sdi_display_esp32.c  deck_sdi_fs_spiffs.c  deck_sdi_http_esp32.c  deck_sdi_info.c  deck_sdi_nvs_esp32.c  deck_sdi_security_esp32.c  deck_sdi_shell_stub.c  deck_sdi_time.c  deck_sdi_wifi_esp32.c
components/deck_shell/: CMakeLists.txt
components/deck_shell/include/: deck_shell.h  deck_shell_apps.h  deck_shell_deck_apps.h  deck_shell_dl2.h  deck_shell_intent.h  deck_shell_lockscreen.h  deck_shell_rotation.h  deck_shell_settings.h
components/deck_shell/src/: deck_shell.c  deck_shell_apps.c  deck_shell_deck_apps.c  deck_shell_dl2.c  deck_shell_intent.c  deck_shell_lockscreen.c  deck_shell_placeholder.c  deck_shell_rotation.c  deck_shell_settings.c
components/os_core/: CMakeLists.txt  os_app_storage.c  os_db.c  os_defer.c  os_event.c  os_poller.c  os_process.c  os_service.c  os_settings.c  os_task.c
components/os_core/include/: os_app_storage.h  os_core.h  os_db.h  os_defer.h  os_event.h  os_poller.h  os_process.h  os_service.h  os_settings.h  os_task.h
components/sys_services/: CMakeLists.txt  os_crash.c  os_db.c  os_storage.c  svc_battery.c  svc_downloader.c  svc_event.c  svc_monitor.c  svc_ota.c  svc_settings.c  svc_time.c  svc_wifi.c
components/sys_services/include/: os_crash.h  os_db.h  os_storage.h  svc_battery.h  svc_downloader.h  svc_event.h  svc_monitor.h  svc_ota.h  svc_settings.h  svc_time.h  svc_wifi.h
components/ui_engine/: CMakeLists.txt  idf_component.yml  ui_activity.c  ui_common.c  ui_effect.c  ui_engine.c  ui_intent.c  ui_keyboard.c  ui_navbar.c  ui_statusbar.c  ui_theme.c
components/ui_engine/include/: ui_activity.h  ui_common.h  ui_effect.h  ui_engine.h  ui_intent.h  ui_keyboard.h  ui_navbar.h  ui_statusbar.h  ui_theme.h
deck-lang/: 01-deck-lang.md  02-deck-app.md  03-deck-os.md  04-deck-runtime.md  05-deck-os-api.md  06-deck-native.md  07-deck-bluesky.md  08-deck-markdown.md  09-deck-shell.md  10-deck-bridge-ui.md  11-deck-implementation.md  12-deck-service-drivers.md  13-deck-cyberdeck-platform.md  14-deck-components.md  15-deck-versioning.md  16-deck-levels.md  BRIDGE.md  BUILTINS.md  CAPABILITIES.md  DECK-3.0-BRIDGE.md  DECK-3.0-BUILTINS.md  DECK-3.0-CAPABILITIES.md  DECK-3.0-DRAFT.md  DECK-3.0-SERVICES.md  LANG.md  SERVICES.md  annex-a-launcher.md  annex-b-task-manager.md  annex-c-settings.md  annex-d-files.md  annex-xx-bluesky.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
tools/: assert_bin_size.cmake
(+15 files in other folders)
